replays/errorlog-20181104-084022-0500-1541338822-32-32-1.log

Turn 1
================================================================
error: communication error with bot: Problem writing to pipe, errno was: 0 (No error)
Last input received was:

    elif me.halite_amount > constants.DROPOFF_COST and not built_drop:
       ^
SyntaxError: invalid syntax

